Fixed the invisible links in meta view in basic theme
The itemlinks in the meta section in the basic theme had the same color as the background color and hence became invisible. Changed the color of the links in this patch to fix the issue.

--- a/MoinMoin/themes/basic/static/custom-less/theme.less
+++ b/MoinMoin/themes/basic/static/custom-less/theme.less
@@ -90,7 +90,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: @search_option_bar_text_color;
   border: 1px solid @search_option_bar_text_color;
   > a {
-    color: @search_option_bar_text_color;
+    color: @search_option_bar_color;
   }
 }
 
@@ -99,6 +99,9 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid @navbar-bg;
   font-variant: small-caps;
   color: @search_option_bar_text_color;
+  > a {
+    color: @search_option_bar_text_color;
+  }
 }
 
 .moin-diff-added {
